# SurfAgent

./: README.md  SurfAgent.cabal  flake.nix  pyproject.toml  surfagent.py
src/: SurfAgent.hs
